# StorageAnalyzer

./: .gitignore  README.md  build_exe.ps1  config.yaml  pyproject.toml  requirements.txt
docs/investigations/: explorer_discrepancy_investigation.md
src/storage_analyzer/: __init__.py  __main__.py  aggregator.py  charts.py  classifier.py  config.py  deepdive.py  main.py  palette.py  report.py  scanner.py  utils.py
templates/: report.html.j2
tests/: test_palette.py  test_reparse_utils.py  test_report_reparse.py  test_scanner_policy.py
tools/investigation/: aggregate_scan_csv.ps1  detect_reparse_points.ps1  measure_onedrive.ps1
